feat : 이미지 추가로 인한 로직 추가